# c-interpreter

./: .gitignore  CMakeLists.txt  README.md  main.cpp  text.txt
include/: interpreter.cpp  interpreter.hpp  visitor.cpp  visitor.hpp
include/lexer/: alphabet.cpp  alphabet.hpp  dictionary.cpp  dictionary.hpp  lexer.cpp  lexer.hpp
include/syntaxer/: syntaxer.cpp  syntaxer.hpp  tree.cpp  tree.hpp
